--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,23 @@ a {
 .mb-80 {
     margin-bottom: 80px;
 }
+
+.mt-20 {
+    margin-top: 20px;
+}
+
+.mt-10 {
+    margin-top: 10px;
+}
+
+.mt-50 {
+    margin-top: 50px;
+}
+
+.mb-20 {
+    margin-bottom: 20px;
+}
+
+.mb-55 {
+    margin-bottom: 55px;
+}
