--- a/styles.css
+++ b/styles.css
@@ -82,3 +82,11 @@ a {
     height: 2px;
     display: inline-block;
 }
+
+input[type="text"] {
+    display: block;
+    background-color: #f1f3f4;
+    color: black;
+    border: none;
+    outline: none;
+}
