--- a/styles.css
+++ b/styles.css
@@ -95,3 +95,20 @@ textarea {
     height: 120px;
     resize: none;
 }
+
+#content-desktop {
+    display: block;
+}
+
+#content-mobile {
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    #content-desktop {
+        display: none;
+    }
+    #content-mobile {
+        display: block;
+    }
+}
