--- a/styles.css
+++ b/styles.css
@@ -117,3 +117,8 @@ textarea {
     text-decoration: none !important;
     color: white !important;
 }
+
+.hrefWithoutDecoration2 {
+    text-decoration: none !important;
+    color: black !important;
+}
