--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,10 @@ input[type="text"] {
     color: white !important;
 }
 
+.onhoverlight:hover {
+    background: #e8eaeb !important;
+}
+
 textarea {
     height: 120px;
     resize: none;
