--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,10 @@ input[type="text"] {
     font-size: 13px;
 }
 
+.A2W7l {
+    font-size: 14px;
+}
+
 textarea {
     height: 120px;
     resize: none;
