--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,10 @@ input[type="text"] {
     font-size: 18px;
 }
 
+.G7BHUb {
+    font-weight: bold
+}
+
 textarea {
     height: 120px;
     resize: none;
