--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,11 @@ body {
     padding: 0;
 }
 
+
+
 .design {
     max-width: 900px;
     width: 100%;
-    ;
     border: 1px groove #2184E7;
     border-radius: 12px;
     overflow: hidden;
@@ -141,10 +142,10 @@ input[type="text"] {
 
 .G7BHUb {
     font-weight: bold
-}
+    font-weight: bold;
 
 .dDoNo {
-    font-size: xx-large !important
+    font-size: xx-large !important;
 }
 
 .adiow {
