--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,11 @@ body {
     padding: 0;
 }
 
-
+.container {
+    max-width: 1200px;
+    margin: auto;
+    overflow: hidden;
+}
 
 .design {
     max-width: 900px;
