--- a/styles.css
+++ b/styles.css
@@ -151,8 +151,8 @@ input[type="text"] {
 }
 
 .G7BHUb {
-    font-weight: bold
     font-weight: bold;
+}
 
 .dDoNo {
     font-size: xx-large !important;
